--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,17 @@
 
 
 
+
+    <!--
+    <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
+    <item name="colorControlNormal">@color/amber500</item>
+    <item name="colorControlActivated">@color/pink500</item>
+    <item name="android:textCursorDrawable">@color/indigo500</item>
+    <item name="android:textColor">@color/orange500</item>
+    <item name="android:textColorHint">@color/teal500</item>
+    <item name="android:textColorHighlight">@color/purple500</item>
+</style>
+
+    -->
+
     </resources>
