--- a/app/src/main/res/layout/activity_button1.xml
+++ b/app/src/main/res/layout/activity_button1.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.o2.anayumeapp.Button1Activity">
+    android:orientation="vertical"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp">
 
-</android.support.constraint.ConstraintLayout>
+    <!-- 説明 -->
+    <TextView
+        android:id="@+id/text03TitleDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="過去の夢"
+        android:textColor="#333333" />
+
+    <!-- ListView -->
+    <ListView
+        android:id="@+id/listView03"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="12dp" />
+</LinearLayout>
