--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -2,19 +2,26 @@
 <resources>
 
     <string-array name="list_entries">
-        <item>繰り返さない</item>
-        <item>リスト２</item>
-        <item>リスト３</item>
-        <item>リスト４</item>
-        <item>リスト５</item>
+        <item>1ヵ月後</item>
+        <item>2ヵ月後</item>
+        <item>3ヵ月後</item>
+        <item>4ヵ月後</item>
+        <item>5ヵ月後</item>
+        <item>6ヵ月後</item>
+        <item>1年後</item>
+        <item>通知を取り消す</item>
+        <item></item>
     </string-array>
 
     <string-array name="list_entryValues">
-        <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
         <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>12</item>
+        <item>0</item>
     </string-array>
 
 </resources>
