--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -17,25 +17,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="10dp">
+        android:gravity="center"
+        android:layout_marginBottom="10dp"
+        >
 
         <Button
             android:id="@+id/button_label1"
             android:text="過去の夢"
             android:textSize="20sp"
-            android:layout_width="0dp"
+            android:layout_width="110dp"
             android:layout_height="50dp"
-            android:layout_weight="0.5"
             android:layout_marginLeft="30dp"/>
-
-        <Button
-            android:id="@+id/button_label3"
-            android:text="設定"
-            android:textSize="20sp"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
-            android:layout_weight="0.5"
-            android:layout_marginRight="30dp"/>
-
     </LinearLayout>
 </FrameLayout>
